--- a/home/index.html
+++ b/home/index.html
@@ -3,12 +3,47 @@
 <head>
   <title>My first Vue page</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/grid.css?version=0.1">
 </head>
 <body>
 
-<h1>Example with JavaScript inside {{ }}</h1>
+    <h1>Christian Garcia's Personal Profile</h1>
 
-<p>The 'message' text from the Vue instance is put together with another text and a JavaScript expression. The JavaScript expression creates a random integer between 1 and 6.</p>
+    <div class="grid-container">
+        <div class="item1">
+            <h2>PERSONAL PROFILE</h2>
+        </div>
+        
+        <div class="item2">
+            <h2>About Me</h2>
+            <img src="https://scontent.fmnl4-2.fna.fbcdn.net/v/t39.30808-6/405508100_910721644100891_3107403962720576991_n.jpg" alt="Profile Picture" width="200">
+            <p>Name: Christian A. Garcia</p>
+            <p>Nickname: Tiyah/Tiyan</p>
+        </div>
+
+        <div class="item3">
+            <h2>Education</h2>
+            <p>High School: Paranaque National High School - Baclaran</p>
+            <p>Senior High Strand: ABM</p>
+            <p>College: Asia Pacific College</p>
+            <p>Course: BSIT-MI (1st Year)</p>
+        </div>
+
+        <div class="item4">
+            <h2>Hobbies</h2>
+            <ul>
+                <li>Gym</li>
+                <li>Playing Games</li>
+            </ul>
+            <h3>Favorite Game</h3>
+            <img src="https://cdn1.epicgames.com/spt-assets/53ec4985296b4facbe3a8d8d019afba9/pubg-battlegrounds-9i69f.jpg" alt="PUBG Battlegrounds" width="300">
+        </div>
+
+        <div class="item5">
+            <h2>Goals</h2>
+            <p>To innovate and create technological solutions that improve daily life, reduce environmental impact, and inspire others to embrace change while maintaining deep connections with my loved ones.</p>
+        </div>
+    </div>
 
 <div id="app">
   {{ message }} <br>
