--- a/home/index.html
+++ b/home/index.html
@@ -4,6 +4,9 @@
   <title>My first Vue page</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/grid.css?version=0.1">
+  <link rel="stylesheet" href="css/pink.css?version=0.1">
+  <link rel="stylesheet" href="css/images.css?version=0.1">
+  <link rel="stylesheet" href="css/shopping.css?version=0.1">
 </head>
 <body>
 
@@ -53,6 +56,7 @@
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 <script src="js/vue.js"></script>
-
+<script src="js/images.js"></script>
+<script src="js/shopping.js"></script>
 </body>
 </html>
